feat: Guidance, accommodation IsClosed logic
-Finished guidance
-Added IsClosed field to Accommodation
-Redefined GetAll to search for Not Closed
-Added AndroidDialogWindow

--- a/WPF/Android/Views/AccommodationGuidancePage.xaml
+++ b/WPF/Android/Views/AccommodationGuidancePage.xaml
@@ -75,17 +75,29 @@
                     </Grid.RowDefinitions>
                     <Label Content="Hottest locations: " Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"
                             Style="{StaticResource Header}"/>
-                    <Label Content="{Binding FirstLocation.LocationInfoTemplate}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"
-                               Style="{StaticResource Header}" BorderBrush="black" BorderThickness="1"/>
 
+                    <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1"  Grid.Column="0" Grid.Row="1" 
+                            VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Label Content="{Binding FirstLocation.LocationInfoTemplate}" 
+                               Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                        </StackPanel>
+                    </Border>
 
-                    <Label Content="{Binding SecondLocation.LocationInfoTemplate}" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"
-                        Style="{StaticResource Header}"  BorderBrush="black" BorderThickness="1"/>
+                    <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1"  Grid.Column="0" Grid.Row="2" 
+         VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Label Content="{Binding SecondLocation.LocationInfoTemplate}"
+                        Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                        </StackPanel>
+                    </Border>
 
                     <Button x:Name="FirstLocationButton" Grid.Row="1" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}" HorizontalAlignment="Center"
                             VerticalAlignment="Center" Click="FirstLocationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                            <Image Source="{StaticResource AddIcon}" Height="40" Width="40"/>
+                            <Image Source="{StaticResource AddIcon}" Height="30" Width="30"/>
                             <Label Content="Add more" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
@@ -93,7 +105,7 @@
                     <Button x:Name="SecondLocationButton" Grid.Row="2" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}"
                             Click="SecondLocationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                            <Image Source="{StaticResource AddIcon}" Height="40" Width="40"/>
+                            <Image Source="{StaticResource AddIcon}" Height="30" Width="30"/>
                             <Label Content="Add more" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
@@ -113,17 +125,31 @@
                     </Grid.RowDefinitions>
                     <Label Content="Least popular locations: " Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"
                 Style="{StaticResource Header}"/>
-                    <Label Content="{Binding ThirdLocation.LocationInfoTemplate}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0"
-                   Style="{StaticResource Header}" BorderBrush="black" BorderThickness="1"/>
 
-                    <Label Content="{Binding FourthLocation.LocationInfoTemplate}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10,0,0,10"
-            Style="{StaticResource Header}"  BorderBrush="black" BorderThickness="1"/>
+                    <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1" 
+                            Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Label Content="{Binding ThirdLocation.LocationInfoTemplate}"
+                   Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                        </StackPanel>
+                    </Border>
+
+                    <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1" 
+         Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10,0,0,10">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Label Content="{Binding FourthLocation.LocationInfoTemplate}"
+            Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                        </StackPanel>
+                    </Border>
+
 
                     <Button x:Name="CloseAccomodationButton" Grid.Row="1" Grid.Column="1" Height="70" Width="130" Style="{StaticResource DisabledButtonStyle}" VerticalAlignment="Top"
-                            Margin="0,10,0,0" Command="{Binding CloseCommand}">
+                            Margin="0,10,0,0" Command="{Binding CloseCommand}" Click="CloseAccomodationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                            <Image Source="{StaticResource LockedIcon}" Height="40" Width="40"/>
-                            <Label Content="Close" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                            <Image Source="{StaticResource LockedIcon}" Height="30" Width="30"/>
+                            <Label Content="Close" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}" Margin="10,0,0,0"/>
                         </StackPanel>
                     </Button>
                     
