--- a/WPF/Android/Views/ForumsPage.xaml
+++ b/WPF/Android/Views/ForumsPage.xaml
@@ -72,7 +72,7 @@
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="{StaticResource HardGreen}" BorderThickness="1" Margin="0,0,0,10">
-            <ListBox ItemsSource="{Binding ForumDTOs}" SelectedItem="{Binding SelectedForum}" SelectionChanged="ListBox_SelectionChanged"
+            <ListBox x:Name="listBox" ItemsSource="{Binding ForumDTOs}" SelectedItem="{Binding SelectedForum}" SelectionChanged="ListBox_SelectionChanged"
       ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden"
       HorizontalContentAlignment="Stretch" Background="{StaticResource Beige}">
                 <ListBox.ItemTemplate>
@@ -111,8 +111,13 @@
                                     <TextBlock Text="{Binding Title}" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="0"
                                             FontFamily="Global sans serif" Background="{StaticResource SoftGreen}" FontSize="20" />
 
-                                    <TextBlock Text="{Binding CommentNum}"  VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="1"
-                                            FontSize="14" FontFamily="Global Sans Serif" Foreground="Black" Margin="0,5,0,0"/>
+                                    <WrapPanel VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="1" Margin="0,5,0,0">
+                                        <TextBlock Text="Comments: "  
+                                            FontSize="14" FontFamily="Global Sans Serif" Foreground="Black" />
+                                        <TextBlock Text="{Binding CommentNum}" FontSize="14" FontFamily="Global Sans Serif" Foreground="Black"/>
+                                    </WrapPanel>
+
+                                    
                                 </Grid>
 
                                 <Image Source="{StaticResource StarIcon}" Height="40" Width="40" Grid.Column="2"
