--- a/App.xaml
+++ b/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:BookingApp"
              StartupUri="WPF/SignInForm.xaml">
     <Application.Resources>
-
+        <ResourceDictionary>
         <BitmapImage x:Key="TimeIcon" UriSource="Resources/Images/Icons/time-icon.png"/>
         <BitmapImage x:Key="ScheduledIcon" UriSource="Resources/Images/Icons/scheduled-icon.png"/>
         <BitmapImage x:Key="CancelIcon" UriSource="Resources/Images/Icons/cancel-icon.png"/>
@@ -63,7 +63,11 @@
         <SolidColorBrush x:Key="Green" Color="#436850"/>
         <SolidColorBrush x:Key="Green2" Color="#5a8c6a"/>
         <SolidColorBrush x:Key="SoftGreen" Color="#ADBC9F"/>
-        <SolidColorBrush x:Key="Beige" Color="#EDEEDD"/>
-        
+        <SolidColorBrush x:Key="Beige" Color="Beige"/>
+
+        <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary Source="pack://application:,,,/ToastNotifications.Messages;component/Themes/Default.xaml" />
+        </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
