--- a/WPF/Desktop/Views/RequestsPage.xaml
+++ b/WPF/Desktop/Views/RequestsPage.xaml
@@ -11,6 +11,8 @@
       Title="RequestsPage">
     <Page.Resources>
         <converters:RadioButtonToStringConverter x:Key="RadioConverter"/>
+        <converters:RequestStatusToColorConverter x:Key="ColorConverter"/>
+        <converters:BooleanToVisibilityConverter x:Key="VisibilityConverter"/>
         <Style TargetType="TabItem" x:Key="Tab">
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="MinWidth" Value="120"/>
@@ -24,10 +26,16 @@
             </Setter>
             <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
         </Style>
-        <Style TargetType="Border" x:Key="BorderStyle">
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="BorderBrush" Value="Black"/>
-            <Setter Property="BorderThickness" Value="0.5"/>
+        <Style x:Key="BaseBorderStyle">
+            <Setter Property="Control.BorderBrush" Value="Black"/>
+            <Setter Property="Control.BorderThickness" Value="0.5"/>
+            <Setter Property="Control.Margin" Value="5"/>
+        </Style>
+        <Style TargetType="Border" x:Key="BorderStyle" BasedOn="{StaticResource BaseBorderStyle}">
+            
+        </Style>
+        <Style TargetType="GroupBox" x:Key="GroupBoxStyle" BasedOn="{StaticResource BaseBorderStyle}">
+
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="Background" Value="{StaticResource Green}"/>
@@ -174,7 +182,8 @@
                                                    Style="{StaticResource Info}"
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
-                                                   Margin="20">
+                                                   Margin="20"
+                                                   Foreground="{Binding Status, Converter={StaticResource ColorConverter}}">
                                             <TextBlock.Text>
                                                 <Binding StringFormat="• {0}" 
                                                          Path="Status"/>
@@ -251,8 +260,114 @@
                                              GroupName="ComplexFilter"
                                              IsChecked="{Binding ComplexFilter, Mode=TwoWay, Converter={StaticResource RadioConverter}, ConverterParameter=Accepted}"/>
                             </StackPanel>
+                            
                         </Grid>
                     </Border>
+                    <ScrollViewer Grid.Row="1"
+                                  Grid.ColumnSpan="2">
+                        <ItemsControl ItemsSource="{Binding ComplexTourRequests}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <GroupBox Header="{Binding Title}"
+                                              Style="{StaticResource GroupBoxStyle}">
+                                        <StackPanel>
+                                            <ItemsControl ItemsSource="{Binding TourRequests}">
+                                                <ItemsControl.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <GroupBox Header="{Binding Title}"
+                                                                  Style="{StaticResource GroupBoxStyle}">
+                                                            <Grid>
+                                                                <Grid.ColumnDefinitions>
+                                                                    <ColumnDefinition Width="*"/>
+                                                                    <ColumnDefinition Width="2*"/>
+                                                                    <ColumnDefinition Width="*"/>
+                                                                </Grid.ColumnDefinitions>
+                                                                <Grid Grid.Column="0"
+                                                                      Margin="20"
+                                                                      HorizontalAlignment="Center">
+                                                                    <Grid.RowDefinitions>
+                                                                        <RowDefinition/>
+                                                                        <RowDefinition/>
+                                                                        <RowDefinition/>
+                                                                        <RowDefinition/>
+                                                                    </Grid.RowDefinitions>
+                                                                    <TextBlock Style="{StaticResource Info}">
+                                                                        <TextBlock.Text>
+                                                                            <MultiBinding StringFormat="{}{0}, {1}">
+                                                                                <Binding Path="Location.City"/>
+                                                                                <Binding Path="Location.Country"/>
+                                                                            </MultiBinding>
+                                                                        </TextBlock.Text>
+                                                                    </TextBlock>
+                                                                    <TextBlock Grid.Row="1"
+                                                                               Text="{Binding Language.Name}"
+                                                                               Style="{StaticResource Info}"/>
+                                                                    <TextBlock Grid.Row="2"
+                                                                               Style="{StaticResource Info}">
+                                                                        <TextBlock.Text>
+                                                                            <MultiBinding StringFormat="{}{0} - {1}">
+                                                                                <Binding Path="StartDate"/>
+                                                                                <Binding Path="EndDate"/>
+                                                                            </MultiBinding>
+                                                                        </TextBlock.Text>
+                                                                    </TextBlock>
+                                                                    <TextBlock Grid.Row="3"
+                                                                               Text="{Binding PassengerNumber}"
+                                                                               Style="{StaticResource Info}"/>
+                                                                </Grid>
+                                                                <Border Style="{StaticResource BorderStyle}"
+                                                                        Margin="20"
+                                                                        Grid.Column="1">
+                                                                    <TextBlock Style="{StaticResource Info}"
+                                                                               Text="{Binding Description}"/>
+                                                                </Border>
+                                                                <TextBlock Grid.Column="2"                                             
+                                                                           Style="{StaticResource Info}"
+                                                                           HorizontalAlignment="Center"
+                                                                           VerticalAlignment="Center"
+                                                                           Margin="20"
+                                                                           Foreground="{Binding Status, Converter={StaticResource ColorConverter}}"
+                                                                           Visibility="{Binding StatusVisible, Converter={StaticResource VisibilityConverter}}">
+                                                                    <TextBlock.Text>
+                                                                        <Binding StringFormat="• {0}" 
+                                                                                 Path="Status"/>
+                                                                    </TextBlock.Text>
+                                                                </TextBlock>
+                                                            </Grid>
+                                                        </GroupBox>
+                                                    </DataTemplate>
+                                                </ItemsControl.ItemTemplate>
+                                            </ItemsControl>
+                                            <Border Style="{StaticResource BorderStyle}"
+                                                    MinHeight="60">
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition/>
+                                                        <ColumnDefinition/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <Button Style="{StaticResource ButtonStyle}"
+                                                            HorizontalAlignment="Left"
+                                                            Content="Click for more information"
+                                                            Padding="10, 0"/>
+                                                    <TextBlock Grid.Column="1"                                             
+                                                               Style="{StaticResource Info}"
+                                                               FontSize="24"
+                                                               HorizontalAlignment="Right"
+                                                               VerticalAlignment="Center"
+                                                               Foreground="{Binding Status, Converter={StaticResource ColorConverter}}">
+                                                        <TextBlock.Text>
+                                                            <Binding StringFormat="• {0}" 
+                                                                     Path="Status"/>
+                                                        </TextBlock.Text>
+                                                    </TextBlock>
+                                                </Grid>
+                                            </Border>
+                                        </StackPanel>
+                                    </GroupBox>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </ScrollViewer>
                 </Grid>
             </TabItem>
         </TabControl>
