--- a/WPF/Android/Views/MainWindow.xaml
+++ b/WPF/Android/Views/MainWindow.xaml
@@ -44,13 +44,14 @@
                        VerticalAlignment="Center" FontWeight="Bold" FontSize="18" FontFamily="Global Sans Serif" Margin="0,0,0,0"
                        Foreground="{StaticResource Beige}"/>
             </StackPanel>
-            <Button Grid.Column="1" Height="40" Width="40" Background="Transparent" BorderBrush="Transparent">
+            <Button x:Name="DemoButton" Click="DemoButton_Click" Grid.Column="1" Height="40" Width="40" Background="Transparent" BorderBrush="Transparent">
                 <Image Source="{StaticResource HelpIcon}"/>
             </Button>
         </Grid>
         <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.ColumnSpan="2" Navigated="mainFrame_Navigated" Background="{StaticResource Beige}"/>
         <Frame x:Name="sideFrame"  Grid.Row="0"  Grid.Column="0" Grid.RowSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
         <Frame x:Name="blackFrame" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
+        <Frame x:Name="demoFrame" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000" Navigated="demoFrame_Navigated"/>
         <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Background="{StaticResource SoftGreen}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
