--- a/WPF/Android/Views/AccommodationRenovationPage.xaml
+++ b/WPF/Android/Views/AccommodationRenovationPage.xaml
@@ -60,6 +60,22 @@
             </Setter>
         </Style>
 
+        <Style x:Key="SearchButtonStyle" TargetType="Button" BasedOn="{StaticResource DisabledButtonStyle}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding SearchDemoClick}" Value="True">
+                    <Setter Property="Background" Value="#5a8c6b"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="ConfirmButtonStyle" TargetType="Button" BasedOn="{StaticResource DisabledButtonStyle}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ConfirmDemoClick}" Value="True">
+                    <Setter Property="Background" Value="#5a8c6b"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
     </Page.Resources>
     <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
@@ -118,7 +134,7 @@
 
         <Button Grid.Column="3" Grid.Row="2" Height="50" Width="130" VerticalAlignment="Center" HorizontalAlignment="Center"
         IsEnabled="{Binding Duration, Converter={StaticResource CountToBoolConverter}}"
-        Click="SearchButton_Click" Style="{StaticResource DisabledButtonStyle}">
+        Click="SearchButton_Click" Style="{StaticResource SearchButtonStyle}">
             <StackPanel Orientation="Horizontal">
                 <Image Source="{StaticResource SearchIcon}" Height="40" Width="40"/>
                 <Label Content="Search" Style="{StaticResource ButtonLabels}" VerticalAlignment="Center"/>
@@ -146,7 +162,7 @@
         </ListView>
 
         <Button Grid.Column="3" Grid.Row="5" Height="50" Width="130" VerticalAlignment="Center" HorizontalAlignment="Center"
-        Command="{Binding AcceptCommand}" Style="{StaticResource DisabledButtonStyle}">
+        Command="{Binding AcceptCommand}" Style="{StaticResource ConfirmButtonStyle}">
             <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
                 <Image Source="{StaticResource ConfirmIconBeige}" Height="30" Width="30"/>
                 <Label Content="Confirm" Style="{StaticResource ButtonLabels}" VerticalAlignment="Center"/>
