--- a/WPF/Android/Views/AllRenovationsPage.xaml
+++ b/WPF/Android/Views/AllRenovationsPage.xaml
@@ -58,6 +58,22 @@
             </Setter>
         </Style>
 
+        <Style x:Key="CancelButtonStyle" TargetType="Button" BasedOn="{StaticResource DisabledButtonStyle}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding CancelDemoClick}" Value="True">
+                    <Setter Property="Background" Value="#5a8c6b"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="ViewButtonStyle" TargetType="Button" BasedOn="{StaticResource DisabledButtonStyle}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ViewDemoClick}" Value="True">
+                    <Setter Property="Background" Value="#5a8c6b"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
     </Page.Resources>
 
     <Grid Background="{StaticResource Beige}">
@@ -107,7 +123,7 @@
         </ListView>
 
         <Button Grid.Column="2" Grid.Row="2" Height="50" Width="130" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10"
-            Command="{Binding ViewCommand}" Style="{StaticResource DisabledButtonStyle}">
+            Command="{Binding ViewCommand}" Style="{StaticResource ViewButtonStyle}">
             <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                 <Image Source="{StaticResource ViewIcon}" Height="30" Width="30"/>
                 <Label Content="View" Style="{StaticResource ButtonLabel}" VerticalAlignment="Center"/>
@@ -134,7 +150,7 @@
         </Label>
         
         <Button x:Name="CancelButton" Grid.Column="1" Grid.Row="2" Height="50" Width="130" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10"
-        Command="{Binding CancelCommand}" Style="{StaticResource DisabledButtonStyle}">
+        Command="{Binding CancelCommand}" Style="{StaticResource CancelButtonStyle}">
             <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                 <Image Source="{StaticResource CancelIconBeige}" Height="30" Width="30"/>
                 <Label Content="Cancel" Style="{StaticResource ButtonLabel}" VerticalAlignment="Center"/>
